<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="primary"
        app:bootstrapHeading="h3"
        app:roundedCorners="true"
        android:text="@string/login_account"
        />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bootstrapSize="md"
        app:bootstrapBrand="info"
        app:roundedCorners="true"
        />

    <com.beardedhen.androidbootstrap.BootstrapLabel
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bootstrapBrand="primary"
        app:bootstrapHeading="h3"
        app:roundedCorners="true"
        android:text="@string/login_password"
        />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bootstrapSize="md"
        app:bootstrapBrand="info"
        app:roundedCorners="true"
        />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_login"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        />
</GridLayout>